--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -41,11 +41,22 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"
     />
+    <!-- Highchart -->
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="https://code.highcharts.com/highcharts.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="https://code.highcharts.com/modules/exporting.js"
+    ></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <!--  -->
   </head>
   <body class="sb-nav-fixed">
@@ -424,11 +435,23 @@
                 <div class="card mb-4">
                   <div class="card-header">
                     <i class="fas fa-chart-pie me-1"></i>
-                    Pie Chart Example
+                    <!-- Pie Chart Example -->
                   </div>
                   <div class="card-body">
-                    <canvas id="myPieChart" width="100%" height="50"></canvas>
+                    <canvas id="pie-chart" width="100%" height="50"></canvas>
                   </div>
+                  <div class="card-footer small text-muted">
+                    Updated yesterday at 11:59 PM
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="card mb-4">
+                  <div class="card-header">
+                    <i class="fas fa-chart-pie me-1"></i>
+                    <!-- Pie Chart Example -->
+                  </div>
+                  <div class="card-body" id="highchart-pie-chart"></div>
                   <div class="card-footer small text-muted">
                     Updated yesterday at 11:59 PM
                   </div>
